--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "masterBaster",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.1",
     "connect-flash": "^0.1.1",
     "express": "^4.15.4",
