--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "App to create video ideas",
   "main": "app.js",
   "scripts": {
-    "test": "node app.js"
+    "start": "node app.js"
   },
   "author": "masterBaster",
   "license": "MIT",
